--- a/templates/donations/demandes/demande_detail.html
+++ b/templates/donations/demandes/demande_detail.html
@@ -1,4 +1,5 @@
 <p>{{demande.id}}</p>
+<p>{{demande.transporteur_livraison}}</p>
 
   {% if demande.statut == "en_attente" %}
     <div class="card shadow-sm p-3">
