--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -9,6 +9,8 @@
     {% if user.is_authenticated and user.user_type == "participant" %}
     <h3>Participant Actions</h3>
 
+    <a href="{% url 'demandes_de_recuperateur' user.id %}">view all demandes</a>
+
     <a href="{% url 'create_demande' %}">create demande</a>
     <br>
     <ul>
